[tool.poetry]
name = "arxiv-auth"
version = "1.1.0"
description = "Auth libraries for arXiv."
authors = ["arxiv.org"]

[tool.poetry.dependencies]
python = "^3.10"
arxiv-base = ">=1.0.0a3"
flask = "*"
sqlalchemy = "*"
flask-sqlalchemy = "*"
mysqlclient = "*"
python-dateutil = "*"
pyjwt = "*"
redis = "==2.10.6"
redis-py-cluster = "==1.3.6"
pydantic = "*"
        
[tool.poetry.dev-dependencies]
pytest = "*"
hypothesis = "*"
fakeredis = "*"
pytest-mock = "^3.8.2"
pytest-cov = "^3.0.0"
mimesis = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
