[tool.poetry]
name = "legacy-auth-provider"
version = "0.1.0"
description = "Legacy Auth REST API provider"
authors = ["Naoyuki Tai <ntai@arxiv.org>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "405551162493109f147da965621a573d73e1cc32"}
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mysql-connector-python = "^9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
